# pytgcalls

./: .gitignore  .npmignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  __init__.py  build.bat  build.sh  install.sh  install_nodejs.py  install_nodejs.sh  package-lock.json  package.json  platform_builder.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_helper.py  test.py  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: build-and-publish-wheels.yml  codeql-analysis.yml  linux-wheel.yml  win-wheel.yml
example/: __main__.py
example/additional_ffmpeg_parameters/: additional_ffmpeg_parameters.py
example/bridged_calls/: example_bridged.py
example/calls_with_module/: __main__.py  example_module.py
example/capture_mic/: example_mic.py
example/conference_calls/: example_conferences.py
example/custom_api/: __main__.py  example_api.py
example/custom_filters/: example_custom.py
example/docker_example/: Dockerfile  README.md  docker_example.py  linux_mount.sh
example/external_capture/: example_external.py
example/fifo_conversion/: example_fifo.py  input.webm
example/frame_sending/: example_frame_sending.py
example/memory_management/: MEMORY_MANAGEMENT.md  memory_management_example.py  requirements-test.txt  test_memory_management.py
example/multiple_calls/: __main__.py  example_multiple.py
example/multiple_clients/: example_multiple.py
example/p2p_example/: example_p2p.py
example/piped_audio_calls/: example_piped_audio.py
example/piped_image_calls/: example_piped_image.py
example/piped_video_calls/: example_piped_video.py
example/raw_streaming/: example_video.py
example/remote_piped_play/: example_remote_piped.py
example/remote_stream_with_header/: remote_stream_with_header.py
example/screen_sharing/: example_desktop.py
example/screen_sharing_mic/: example_desktop_mic.py
example/simple_calls/: example_simple.py
example/telethon_example/: example_telethon.py
example/video_calls/: audio.raw  example_piped_video.py  example_video.py
example/whisper_transcription/: README.md  ai_model.py  example_transcription.py
example/youtube_dl/: youtube_dl_example.py
pytgcalls/: .gitignore  __init__.py  __version__.py  binding.py  chat_lock.py  environment.py  exceptions.py  ffmpeg.py  ffprobe.py  file_manager.py  filters.py  idle.py  list_to_cmd.py  memory_manager.py  mtproto_required.py  mutex.py  pyrocache.py  pytgcalls.py  pytgcalls_session.py  scaffold.py  statictypes.py  stream_type.py  sync.py  to_async.py  version_manager.py  wait_counter_lock.py  ytdlp.py
pytgcalls/custom_api/: __init__.py  custom_api.py
pytgcalls/custom_fifo/: __init__.py  ffmpeg_async.py  ffprobe.py  fifo.py  mkfifo.py
pytgcalls/handlers/: __init__.py  handlers_holder.py
pytgcalls/js/: api_sender.js  core.js  package-lock.json  package.json  rtc_connection.js
pytgcalls/media_devices/: __init__.py  device_info.py  input_device.py  media_devices.py  screen_device.py  screen_info.py  speaker_device.py
pytgcalls/methods/: __init__.py
pytgcalls/methods/async_request/: __init__.py  async_result.py  run_async.py
pytgcalls/methods/call_property/: __init__.py  active_calls.py  add_active_call.py  add_call.py  calls.py  remove_active_call.py  remove_call.py  set_status.py
pytgcalls/methods/calls/: __init__.py  change_volume_call.py  get_participants.py  leave_call.py
pytgcalls/methods/core/: __init__.py  active_calls.py  b_colors.py  binding_runner.py  env.py  generate_session.py  get_active_voice_chat.py  get_cache_id.py  get_cache_peer.py  get_max_voice_chat.py  get_port_server.py  get_user_id.py  is_running_js_core.py  join_voice_call.py  leave_voice_call.py  run_js.py  run_waiting_requests.py  set_video_call_status.py  spawn_process.py
pytgcalls/methods/custom_api/: __init__.py  custom_api.py  custom_api_update.py  on_update_custom.py
pytgcalls/methods/decorators/: __init__.py  on_closed_voice_chat.py  on_group_call_invite.py  on_kicked.py  on_left.py  on_participants_change.py  on_raw_update.py  on_stream_end.py  on_update.py
pytgcalls/methods/groups/: __init__.py  active_calls.py  calls.py  change_volume_call.py  get_active_call.py  get_call.py  get_participants.py  join_group_call.py  leave_group_call.py
pytgcalls/methods/handler/: __init__.py  on_closed_voice_chat.py  on_event_update.py  on_group_call_invite.py  on_kicked.py  on_no_voice_chat.py  on_raw_event.py  on_stream_end.py
pytgcalls/methods/handlers/: __init__.py  raw_update_handler.py  stream_ended_handler.py
pytgcalls/methods/internal/: __init__.py  clear_cache.py  clear_call.py  connect_call.py  emit_sig_data.py  handle_connection_changed.py  handle_emojis_update.py  handle_mtproto_updates.py  handle_request_participants.py  handle_stream_ended.py  handle_stream_frame.py  handle_subchain_request.py  join_conference.py  join_presentation.py  log_retries.py  request_broadcast_part.py  request_broadcast_timestamp.py  switch_connection.py  update_sources.py  update_status.py
pytgcalls/methods/listener/: __init__.py  listener_kick.py
pytgcalls/methods/logs/: py_logs.py
pytgcalls/methods/stream/: __init__.py  change_stream.py  is_playing.py  mute.py  mute_stream.py  pause.py  pause_stream.py  play.py  played_time.py  record.py  resume.py  resume_stream.py  send_frame.py  stream_type.py  time.py  unmute.py  unmute_stream.py
pytgcalls/mtproto/: __init__.py  bridged_client.py  client_cache.py  hydrogram_client.py  mtproto_client.py  pyrogram_client.py  pyrograms_client.py  telethon_client.py
pytgcalls/types/: __init__.py  browsers.py  cache.py  call_holder.py  dict.py  flag.py  list.py  object.py  participant_list.py  py_object.py  session.py  update.py  update_solver.py  user_agent.py
src/: args.ts  binding.ts  buffer_optimized.ts  ffmpeg_reader.ts  file_reader.ts  index.ts  local-conf-desc.ts  package.json  rtc-connection.ts  sdp-builder.ts  send-update.ts  stream.ts  tgcalls.ts  types.ts  utils.ts
(+138 files in other folders)
