[project]
name = "anthraleia-pytgcalls"  
version = "1.0.2"              
description = "Yet Another Async client API for the Telegram Calls."
readme = "README.md"
license = "LGPL-3.0-or-later"
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
authors = [
    {name = "depinrise", email = "depinrise@proton.me"},  
]
keywords = [
    "audio", "python", "library", "video", "telegram", "stream",
    "ffmpeg", "cpp", "webrtc", "voice-chat", "voip", "group-chat",
    "video-calls", "calls", "video-chat", "pytgcalls", "ntgcalls",
    "tgcalls", "py-tgcalls", "pyrogram", "telethon", "hydrogram",
    "anthraleia", "memory-leak", "enhanced", "stable"
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.3",
    "ntgcalls>=2.0.5,<3.0.0",
    "deprecation",
]

[project.optional-dependencies]
pyrogram = ["pyrogram>=1.2.20"]
telethon = ["telethon>=1.24.0"]
hydrogram = ["hydrogram>=0.1.4"]
memory-monitoring = ["psutil>=5.8.0"]

[project.urls]
Homepage = "https://github.com/anthraleia/pytgcalls"               
Repository = "https://github.com/anthraleia/pytgcalls.git"         
Documentation = "https://github.com/anthraleia/pytgcalls#readme"  
Changelog = "https://github.com/anthraleia/pytgcalls/releases"     

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools >= 69.2.0", "wheel >= 0.43.0"]

[tool.setuptools.packages.find]
include = ["pytgcalls*"]