[metadata]
name = py_tgcalls
version = 0.3.7
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytgcalls/pytgcalls
author = Laky64
author_email = iraci.matteo@gmail.com
license = LGPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    Naked
    aiohttp
    asyncio
    pyrogram
    python-socketio
    requests
    tgcrypto
python_requires = >=3.6.1
include_package_data = True

[bdist_wheel]
universal = True
